--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,12 @@
     <meta name="theme-color" content="#e2e1e0">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
     <title>Riistakamera Parkano</title>
+
+    <script>
+      window.preloadedImages = !!!image_data!!!
+    </script>
   </head>
   <body>
     <noscript>
