--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="Description" content="Suomalainen internet riistakamera">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#e2e1e0">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
