--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="fi">
     <meta charset="utf-8">
     <meta name="Description" content="Suomalainen internet riistakamera">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
