Use better lightbox module

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     <title>Riistakamera Parkano</title>
 
     <script>
-      window.preloadedImages = !!!image_data!!!
+      window.preloadedImages = [ '!image_data!' ];
     </script>
   </head>
   <body>
