--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="Description" content="Suomalainen internet riistakamera">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#e2e1e0">
+    <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
