--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="fi">
   <head>
     <meta charset="utf-8">
-    <meta name="Description" content="Suomalainen internet riistakamera">
+    <meta name="Description" content="Suomalainen internet riistakamera Pirkanmaalla">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
