Update title again

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <title>Riistakamera Parkano</title>
+    <title>Pirkanmaan riistakamera</title>
 
     <script>
       window.preloadedImages = [ '!image_data!' ];
