Fix development mode

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <title>Pirkanmaan riistakamera</title>
 
     <script>
-      window.preloadedImages = [ '!image_data!' ];
+      /*!!!preloadedImages!!!*/
     </script>
   </head>
   <body>
