Support client overrides

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,13 +19,15 @@
       window.config = {
         locale: "__LOCALE__",
         googleAnalyticsId: "__GOOGLE_ANALYTICS_ID__",
-        preloadedImages: __PRELOADED_IMAGES__
+        preloadedImages: __PRELOADED_IMAGES__,
+        translations: __TRANSLATIONS__
       };
     } catch (e) {
       window.config = {
         locale: 'en-us',
         googleAnalyticsId: null,
-        preloadedImages: []
+        preloadedImages: [],
+        translations: {}
       }
     }
   </script>
