--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,12 +17,13 @@
   <script>
     try {
       window.config = {
-        locale: "__LOCALE__",
-        googleAnalyticsId: "__GOOGLE_ANALYTICS_ID__",
+        locale: __LOCALE__,
+        googleAnalyticsId: __GOOGLE_ANALYTICS_ID__,
         preloadedImages: __PRELOADED_IMAGES__,
         translations: __TRANSLATIONS__
       };
     } catch (e) {
+      // For dev mode
       window.config = {
         locale: 'en-us',
         googleAnalyticsId: null,
